# nisq-compiler-mitigation

./: .gitignore  environment.yml  pyproject.toml
ai_prompts/: code_review.md
experiments/: __init__.py
experiments/results/: noise_sweep_results.csv
experiments/scripts/: __init__.py  benchmark_compilation.py  build_simple_circuit.py  plot_noise_sweep.py  run_noise_sweep.py  run_readout_mitigation_demo.py
plan/: 00_project_overview.md  01_repo_and_tooling_setup.md  week_01.md  week_02.md  week_03.md  week_04.md
src/qc_compiler/: __init__.py
src/qc_compiler/circuits/: __init__.py  circuit.py  gate.py  qubit.py
src/qc_compiler/compilation/: __init__.py  metrics.py  pass_base.py  pass_manager.py
src/qc_compiler/compilation/passes/: __init__.py  cancel_inverses.py
src/qc_compiler/execution/: __init__.py  sampling.py
src/qc_compiler/mitigation/: __init__.py  confusion_matrix.py  readout_mitigation.py
src/qc_compiler/noise/: __init__.py  measurement_noise.py  noise_model.py  readout_sampling.py
tests/circuits/: test_circuit.py  test_gate.py  test_qubit.py
tests/compilation/: test_cancel_inverses.py  test_metrics.py  test_pass_base.py  test_pass_manager.py
tests/execution/: test_sampling.py
tests/experiments/: test_benchmark_compilation.py  test_build_circuit.py  test_noise_sweep.py  test_plot_noise_sweep.py  test_run_readout_mitigation_demo.py
tests/mitigation/: test_confusion_matrix.py  test_readout_mitigation.py
tests/noise/: test_measurement_noise.py  test_noise_model.py  test_readout_sampling.py
